--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <!-- built files will be auto injected -->
     <script src="./static/zepto.min.js"></script>
     <script src="https://www.sobot.com/chat/frame/js/entrance.js?sysNum=795ffce8892a4371aa682bc3ecf7935f"  class="zhiCustomBtn" id="zhichiScript"></script>
-<!--    <script src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>-->
-<!--    <script>-->
-<!--        //手机端的调试工具-->
-<!--        var vConsole = new VConsole();-->
-<!--    </script>-->
+    <script src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
+    <script>
+        //手机端的调试工具
+        var vConsole = new VConsole();
+    </script>
 </body>
 </html>
